[package]
name = "autogen_rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.83"
async-openai = "0.21"
async-trait = "0.1.79"
reqwest = "0.12.4"
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
dotenv = "0.15.0"
urlencoding = "2.1.3"
rustpython = { version = "0.3.1", default-features = false, features = ["encodings", "stdlib"] }
rustpython-vm = { version = "0.3.1", default-features = false, features = ["encodings"] }
rustpython-stdlib = "0.3.1"
regex = "1.10.4"
